--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="about__container container grid">
           <div class="image-container">
-            <img src="/assets/img/IMG-20250306-WA0009.jpg" alt="" class="about__img" />
+            <img src="assets/img/IMG-20250306-WA0009.jpg" alt="" class="about__img" />
           </div>
          
 
@@ -523,7 +523,7 @@
           <div class="swiper-wrapper">
             <!-- ------------------------portfollio 1-------------------- -->
             <div class="portfolio__content grid swiper-slide">
-              <img src="/assets/img/pr1.jpg" class="portfolio__img" />
+              <img src="assets/img/pr1.jpg" class="portfolio__img" />
 
               <div class="portfolio__data">
                 <h3 class="portfolio__title">
