--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
 
             <div class="about__buttons">
-              <a download="" href="/assets/Chethan_K_S_Resume.pdf" class="button button--flex">
+              <a download="Chethan_K_S_Resume.pdf" href="/assets/Chethan_K_S_Resume.pdf" class="button button--flex">
                 Download CV<i class="fas fa-download button__icon"></i>
               </a>
             </div>
